test/spec_vectors/i32/fail/module_15.wat
(module (global $x (mut i32) (i32.const 0)) (func $type-unary-operand-empty-in-global.set (global.set $x (i32.eqz)) (global.get $x) (drop)))